<resources>
    <string name="app_name">Airmns</string>

    <string name="hello_world">Hello world!</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>




    <!-- LAYOUT 1 LOGIN-->
    <string name="txt_link_signup_L1_login">No account yet? Create one</string>
    <string name="txt_btn_login_L1_login">Login</string>



    <!-- LAYOUT 2 SIGN UP-->
    <string name="txt_link_login_L2_sign_up">Already a member? Login</string>
    <string name="txt_radio_client_L2_sign_up">Client</string>
    <string name="txt_radio_professional_L2_sign_up">Professional</string>
    <string name="txt_btn_signup_L2_signup">Create Account</string>



    <!-- LAYOUT 3A MAIN USER (no have text views)-->
    <!-- LAYOUT 3B MAIN PROFESSIONAL (no have text views)-->



    <!-- LAYOUT  4 EDIT ADDRESS & PROFILE -->
    <string name="txt_titleSpinner_L4_edit">Address list</string>
    <string name="txt_buttonAddAddress_L4_edit">Add Address</string>
    <string name="txt_saveChanges_L4_edit">Save changes</string>
    <string name="txt_add_L4_edit">Add</string>
    <string name="txt_modify_L4_edit">Modify</string>
    <string name="txt_remove_L4_edit">Remove</string>
    <string name="txt_editAddressClient_L4_edit">Edit address</string>
    <string name="txt_anyChangesBack_L4_edit">Any changes? Back</string>


    <!-- LAYOUT 5 RESERVE -->
    <!--title-->
    <string name="txt_title_manage_reserve_5A_reserve">MANAGE RESERVE</string>
    <!--date-->
    <string name="txt_date_text_5A_reserve">Date</string>
    <string name="txt_print_date_5A_reserve">1/1/2000</string>
    <!--time-->
    <string name="txt_time_text_5A_reserve">Time</string>
    <string name="txt_print_time_5A_reserve">00:00</string>
    <!--long time-->
    <string name="txt_long_time_text_5A_reserve">Long time</string>
    <!--Spinner long time-->
    <string-array name="txt_time_value_L5A_reserve">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
    </string-array>
    <!--address-->
    <string name="txt_address_text_5A_reserve">Address</string>
    <!--Spinner address-->
    <string-array name="txt_address_value_5A_reserve">
        <item>C/ Mallorca 96, 8-2, 08015 Bcn</item>
        <item>C/ Valencia 22, 2-2, 08015 Bcn</item>
        <item>C/ Arago 85, 5-1, 08015 Bcn</item>
        <item>C/ Diputacio 45, 1-2, 08015 Bcn</item>
    </string-array>
    <!--observations-->
    <string name="txt_observations_text_5A_reserve">Observations</string>
    <!--total pay-->
    <string name="txt_total_pay_text_5A_reserve">Total: </string>
    <string name="txt_total_value_text_5A_reserve">0€</string>
    <!--buttons-->
    <string name="txt_button_date_5A_reserve">INPUT DATE</string>
    <string name="txt_button_time_5A_reserve">INPUT TIME</string>
    <string name="txt_button_find_5A_reserve">FIND PROFESSIONAL AVAILABILITY</string>
    <string name="txt_button_pay_5A_reserve">CONTINUE</string>



    <!-- LAYOUT 5 RESUME RESERVE -->
    <!--title-->
    <string name="txt_title_manage_reserve_L5_resume_reserve">RESUME RESERVE</string>
    <!--date-->
    <string name="txt_date_text_L5_resume_reserve">Date</string>
    <string name="txt_print_date_L5_resume_reserve">1/1/2000</string>
    <!--time-->
    <string name="txt_time_text_L5_resume_reserve">Time</string>
    <string name="txt_time_L5_resume_reserve">00:00</string>
    <!--address-->
    <string name="txt_address_text_L5_resume_reserve">Address</string>
    <string name="txt_address_L5_resume_reserve">C/ Mallorca 96, 8-2, 08015 Bcn</string>
    <!--observations-->
    <string name="txt_observations_text_L5_resume_reserve">Observations</string>
    <string name="txt_observations_L5_resume_reserve">Observations...</string>
    <!--total pay-->
    <string name="txt_total_pay_text_L5_resume_reserve">Total: </string>
    <string name="txt_total_value_text_L5_resume_reserve">0€</string>
    <!--buttons-->
    <string name="txt_button_pay_L5_resume_reserve">PAY</string>

    <!-- LAYOUT 6 BOOKING HISTORY USER -->
    <!-- Title -->
    <string name="txt_title_booking_L6A">Booking history</string>

    <!-- LAYOUT DESC BOOKING USER -->
    <string name="txt_title_descbooking">Detail booking</string>
    <string name="txt_date_descbooking">Date: </string>
    <string name="txt_time_descbooking">Time: </string>
    <string name="txt_observations_descbooking">Observations: </string>
    <string name="txt_value_descbooking">Value service: </string>
    <string name="txt_price_descbooking">Price: </string>
    <!-- LAYOUT 7 PROFESSIONAL AVAILABILITY -->
    <!--title-->
    <string name="txt_title_manage_reserve_L7_professional_availability">AVAILABILITY</string>
    <string name="txt_textView_date_text_L7_professional_availability">Date</string>
    <string name="txt_textView_date_L7_professional_availability">1/1/2000</string>
    <string name="txt_start_time_L7_professional_availability">Start time</string>
    <string name="txt_end_time_L7_professional_availability">End time</string>
    <!--<string name="txt_button_date_L7">INPUT DATE</string>
    <string name="txt_button_select_all_L7">SELECT ALL</string>
    <string name="txt_button_restart_L7">SELECT NONE</string>-->
    <string name="txt_button_ok_L7">OK</string>
    <!--NEW-TODO-->
    <string name="txt_title_manage_reserve_L7_menu_availability">AVAILABILITY</string>
    <string name="txt_definition_L7_menu_availability">A list is shown with all the dates previously introduced in availability. Select one to either for modify or delete.</string>
    <string name="txt_spinner_L7_menu_availability">Availability list</string>
    <string name="txt_add_L7_professional_availability">ADD</string>
    <string name="txt_modify_L7_professional_availability">MODIFY</string>
    <string name="txt_remove_L7_professional_availability">DELETE</string>

    <!-- LAYOUT 8 VALUE RESERVE -->
    <!--title-->
    <string name="txt_title_booking_L8A">Bookings to rate</string>
    <string name="txt_title_valorate_reserve_L8_value_reserve">VALUE RESERVE</string>
    <!-- user -->
    <string name="txt_user_name_L8_value_reserve">User name</string>
    <string name="txt_user_surname_L8_value_reserve">User surname</string>
    <string name="txt_user_email_L8_value_reserve">user@mailinator.com</string>
    <string name="txt_user_phone_L8_value_reserve">(+34) 689 098 098</string>
    <!-- reserve -->
    <string name="txt_print_date_L8_resume_reserve">1/1/2000</string>
    <string name="txt_time_L8_resume_reserve">00:00 - 01:00</string>
    <string name="txt_address_L8_resume_reserve">C/ Mallorca 96, 8-2, 08015 Bcn</string>
    <string name="txt_observations_L8_resume_reserve">Observations...</string>
    <!-- observations -->
    <string name="txt_title_observations_text_L8_valore_reserve">Observations...</string>
    <string name="txt_title_observations_L8_resume_reserve">Observations...</string>
    <!-- observations -->
    <string name="txt_button_done_L8_resume_reserve">DONE</string>



    <!-- LAYOUT 9 INFO -->
    <string name="company_info_L9_info">Company info</string>
    <string name="app_info_L9_info">App info</string>
    <string name="txt_titleContact_L9_info">Contact</string>
</resources>
