<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:background="@color/primary_darker">



    <!-- TITLE -->
    <TextView
        android:id="@+id/title_manage_reserve_5A_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.33"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/txt_title_manage_reserve_5A_reserve"
        android:textColor="@android:color/background_light"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:fontFamily="cursive" />



    <!-- DATE -->
    <TextView
        android:id="@+id/date_text_5A_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:text="@string/txt_date_text_5A_reserve"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/print_date_5A_reserve"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_weight="0.59"
            android:gravity="bottom"
            android:text="@string/txt_print_date_5A_reserve"
            android:paddingBottom="3dp"
            android:textColor="#1b4f72"
            android:textSize="18sp" />

        <!-- BUTTON -->
        <Button
            android:id="@+id/button_date_5A_reserve"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
            android:text="@string/txt_button_date_5A_reserve" />

    </LinearLayout>

    <!-- Linea -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:background="#007095" />



    <!-- Time -->
    <TextView
        android:id="@+id/time_text_5A_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:text="@string/txt_time_text_5A_reserve"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/print_time_5A_reserve"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_weight="0.59"
            android:gravity="bottom"
            android:paddingBottom="3dp"
            android:text="@string/txt_print_time_5A_reserve"
            android:textColor="#1b4f72"
            android:textSize="18sp" />

        <!-- BUTTON -->
        <Button
            android:id="@+id/button_time_5A_reserve"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
            android:text="@string/txt_button_time_5A_reserve" />

    </LinearLayout>

    <!--Linea-->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:background="#007095" />



    <!-- LONG TIME -->
    <TextView
        android:id="@+id/long_time_text_5A_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:text="@string/txt_long_time_text_5A_reserve"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/spinner_long_time_5A_reserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:background="#007095" />



    <!-- ADDRESS -->
    <TextView
        android:id="@+id/address_text_5A_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:text="@string/txt_address_text_5A_reserve"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/spinner_address_5A_reserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:background="#007095" />



    <!-- OBSERVATIONS -->
    <TextView
        android:id="@+id/observations_text_5A_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:text="@string/txt_observations_text_5A_reserve"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/input_observations_5A_reserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="#1b4f72" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:layout_weight="0.14">


        <!-- SPACE -->
        <LinearLayout
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- TOTAL PAY-->
            <TextView
                android:id="@+id/total_pay_text_5A_reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_total_pay_text_5A_reserve"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_value_text_5A_reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_total_value_text_5A_reserve"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textStyle="bold" />


        </LinearLayout>





    </LinearLayout>

    <!-- BUTTON CONTINUE-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_find_5A_reserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="@string/txt_button_find_5A_reserve" />

        <Button
            android:id="@+id/button_pay_5A_reserve"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_button_pay_5A_reserve" />

    </LinearLayout>

</LinearLayout>